# eiax

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
old/: PACKAGE_README.md  README.md  pyproject.toml
old/.github/workflows/: ci.yml
old/scripts/: generate_api_routes_doc.py
old/src/eiax/: _sync.py  client.py  series.py
old/src/eiax/catalog/: facet_values.parquet
old/tests/: conftest.py  test_cache.py  test_catalog.py  test_client.py  test_fetch.py  test_parse.py
scripts/: build_catalog.py  smoke-test-can-we-conn-to-api.py
src/eiax/: __init__.py  api_client.py  cache.py  errors.py  fetch.py  parse.py  schema.py  settings.py
src/eiax/catalog/: __init__.py  branch_notes.json  nodes.parquet  routes.parquet
tests/: test_integration.py  test_series.py  test_settings.py
