[project]
name = "eiax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "noumen4", email = "signups@forestgreen.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "polars",
    "httpx",
    "pyarrow",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
fastjson = [
    "orjson>=3.11.9",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
