[project]
name = "eiax"
dynamic = ["version"]
description = "Fast, unofficial Python client for the EIA Open Data API v2 (Polars-native, cached)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "forest green" }]
keywords = [
  "eia",
  "energy",
  "open-data",
  "polars",
  "electricity",
  "api-client",
  "time-series",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28",
  "polars>=1.0",
  "pyarrow>=18",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[project.urls]
Homepage = "https://github.com/frstgrn/eiax"
Repository = "https://github.com/frstgrn/eiax"
Issues = "https://github.com/frstgrn/eiax/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.9",
  "pyright>=1.1",
]
fastjson = ["orjson>=3.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/eiax/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/eiax"]

[tool.hatch.build.targets.wheel.force-include]
"src/eiax/catalog/routes.parquet" = "eiax/catalog/routes.parquet"
"src/eiax/catalog/nodes.parquet" = "eiax/catalog/nodes.parquet"
"src/eiax/catalog/facet_values.parquet" = "eiax/catalog/facet_values.parquet"
"src/eiax/catalog/branch_notes.json" = "eiax/catalog/branch_notes.json"

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: live EIA API tests (needs EIA_API_KEY)",
]
